--- a/targeting/angular.json
+++ b/targeting/angular.json
@@ -126,5 +126,8 @@
       }
     }
   },
-  "defaultProject": "targeting"
+  "defaultProject": "targeting",
+  "cli": {
+    "analytics": false
+  }
 }
