--- a/targeting/package.json
+++ b/targeting/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@syncfusion/ej2-angular-buttons": "^17.4.51",
+    "@syncfusion/ej2-angular-calendars": "^17.4.51",
+    "@syncfusion/ej2-angular-inputs": "^17.4.55",
+    "@syncfusion/ej2-angular-treegrid": "^17.4.51",
     "mdbootstrap": "^4.14.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0",
