--- a/targeting/package.json
+++ b/targeting/package.json
@@ -25,6 +25,13 @@
     "@syncfusion/ej2-angular-calendars": "^17.4.51",
     "@syncfusion/ej2-angular-inputs": "^17.4.55",
     "@syncfusion/ej2-angular-treegrid": "^17.4.51",
+    "apollo-angular": "^1.9.1",
+    "apollo-angular-boost": "^1.8.0",
+    "apollo-angular-link-http": "^1.10.0",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "graphql": "<15.0.0",
+    "graphql-tag": "^2.10.3",
     "mdbootstrap": "^4.14.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0",
@@ -40,6 +47,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "apollo-codegen": "^0.20.2",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
