--- a/targeting/package.json
+++ b/targeting/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@syncfusion/ej2": "^18.1.54",
     "@syncfusion/ej2-angular-buttons": "^17.4.51",
     "@syncfusion/ej2-angular-calendars": "^17.4.51",
+    "@syncfusion/ej2-angular-heatmap": "^18.1.54",
     "@syncfusion/ej2-angular-inputs": "^17.4.55",
+    "@syncfusion/ej2-angular-pivotview": "^18.1.54",
     "@syncfusion/ej2-angular-treegrid": "^17.4.51",
     "apollo-angular": "^1.9.1",
     "apollo-angular-boost": "^1.8.0",
@@ -34,13 +37,13 @@
     "graphql-tag": "^2.10.3",
     "mdbootstrap": "^4.14.0",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0",
+    "primeng": "^9.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "^9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
