--- a/targeting/package.json
+++ b/targeting/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~9.0.7",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.0.7",
@@ -34,6 +35,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-ws": "^1.0.20",
+    "bootstrap": "^4.5.3",
     "graphql": "<15.0.0",
     "graphql-tag": "^2.10.3",
     "mdbootstrap": "^4.14.0",
